--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@ body {
 	right: 50px;
 	background-color: #3498db;
 	color: #fff;
-	padding: 10px 20px;
+	padding: 10px 10px;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
@@ -74,7 +74,7 @@ section {
 	padding: 0 70px;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
+	width: 98%;
 	height: 100vh;
 }
 
@@ -341,6 +341,7 @@ section {
 	letter-spacing: 15px;
 	color: var(--pr-color);
 	text-transform: uppercase;
+	max-width: 95vw;
 }
 
 a{
